WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147785
Page cache doesn't work for pages actively using Geolocation
https://bugs.webkit.org/show_bug.cgi?id=147785
Summary
Page cache doesn't work for pages actively using Geolocation
Chris Dumez
Reported
2015-08-07 10:12:48 PDT
Page cache doesn't work for pages actively using Geolocation.
Attachments
Patch
(12.06 KB, patch)
2015-08-07 11:23 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.18 KB, patch)
2015-08-07 20:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-08-07 10:12:57 PDT
rdar://problem/11147901
Chris Dumez
Comment 2
2015-08-07 11:08:13 PDT
rdar://problem/11147901
Chris Dumez
Comment 3
2015-08-07 11:23:20 PDT
Created
attachment 258515
[details]
Patch
Chris Dumez
Comment 4
2015-08-07 20:47:19 PDT
Created
attachment 258557
[details]
Patch
Chris Dumez
Comment 5
2015-08-07 20:51:48 PDT
I also tested manually with Google Maps on iOS and: 1. The page goes into the PageCache 2. When navigating back, no permission request is done, the location on the map keeps updating 3. If the location permissions are reset in General Settings while the page is into the PageCache, we correctly ask again for permission when navigating back to Google Maps.
Darin Adler
Comment 6
2015-08-09 18:11:56 PDT
Comment on
attachment 258557
[details]
Patch No rationale in this patch. Why did we think this wasn’t OK before? Why do we know it’s OK now? Is there nothing else we need to do to make everything work correctly?
Chris Dumez
Comment 7
2015-08-09 18:25:11 PDT
(In reply to
comment #6
)
> Comment on
attachment 258557
[details]
> Patch > > No rationale in this patch. Why did we think this wasn’t OK before? Why do > we know it’s OK now? Is there nothing else we need to do to make everything > work correctly?
I asked Benjamin and he did not remember why he restricted this in the first place. Benjamin thought the issue may have been related to revoking location permissions on iOS but I have manually tested that this is working as expected. The PageCaching code seems to be doing all the right things and testing (manual and layout tests) seem to work as expected. It is possible we simply played it safe due to timing restrictions.
WebKit Commit Bot
Comment 8
2015-08-09 21:14:22 PDT
Comment on
attachment 258557
[details]
Patch Clearing flags on attachment: 258557 Committed
r188204
: <
http://trac.webkit.org/changeset/188204
>
WebKit Commit Bot
Comment 9
2015-08-09 21:14:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug