Page cache doesn't work for pages actively using Geolocation https://bugs.webkit.org/show_bug.cgi?id=147785 <rdar://problem/11147901>

Reviewed by Darin Adler.

Source/WebCore:

Allow pages actively using Geolocation into the PageCache.

Tests: fast/history/page-cache-geolocation-active-oneshot.html
       fast/history/page-cache-geolocation-active-watcher.html

* Modules/geolocation/Geolocation.cpp:
(WebCore::Geolocation::canSuspendForPageCache):
(WebCore::Geolocation::suspend): Deleted.
* history/PageCache.cpp:

LayoutTests:

Add layout test coverage for page caching of pages actively using
the Geolocation API.

* fast/history/page-cache-geolocation-active-oneshot-expected.txt: Added.
* fast/history/page-cache-geolocation-active-oneshot.html: Added.
* fast/history/page-cache-geolocation-active-watcher-expected.txt: Added.
* fast/history/page-cache-geolocation-active-watcher.html: Added.


Canonical link: https://commits.webkit.org/165935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188204 268f45cc-cd09-0410-ab3c-d52691b4dbfc