Source/WebCore/Modules/geolocation/Geolocation.cpp
@@ -164,15 +164,12 @@ Page* Geolocation::page() const
 
 bool Geolocation::canSuspendForPageCache() const
 {
-    return !hasListeners();
+    return true;
 }
 
 void Geolocation::suspend(ReasonForSuspension reason)
 {
-    // Allow pages that no longer have listeners to enter the page cache.
-    // Have them stop updating and reset geolocation permissions when the page is resumed.
     if (reason == ActiveDOMObject::PageCache) {
-        ASSERT(!hasListeners());
         stop();
         m_resetOnResume = true;
     }
